remove jdk 11 stuff